// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payments should render when transactions are present 1`] = `
.c5 {
  border: 2px solid transparent;
  border-left-color: #333;
  border-radius: 50%;
  width: 1.2rem;
  height: 1.2rem;
  display: block;
  margin: 0.25rem;
  -webkit-animation: keep-spinning 500ms infinite;
  animation: keep-spinning 500ms infinite;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.2);
  padding: 0 0.5rem;
  margin-bottom: 1.5rem;
}

.c2 {
  font-size: 1.2rem;
  padding: 0.5rem;
  border: 1px solid #ccc;
  border-radius: 0.25rem;
  width: 100%;
}

.c1 {
  margin-top: 1rem;
  margin-bottom: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > * {
  margin-right: 0.5rem;
}

.c4 {
  min-width: 300px;
  padding: 0.5rem;
  border: 1px solid #ccc;
  border-radius: 0.35em;
  font-size: 1rem;
  font-weight: 300;
  line-height: 1.5;
  margin: 0.5rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

<div>
  <section>
    <header
      class="c0"
    >
      <h2
        class="c1"
      >
        page.payments.title
      </h2>
      <div
        class=""
      >
        <select
          class="c2"
        >
          <option
            value="en"
          >
            EN 🇬🇧
          </option>
          <option
            value="fr"
          >
            FR 🇫🇷
          </option>
        </select>
      </div>
    </header>
    <div
      class="c3"
    >
      <input
        class="c4"
        placeholder="Filter Payments"
        type="text"
      />
    </div>
    <div
      class="c5"
      data-testid="spinner"
      title="Loading..."
    />
  </section>
</div>
`;

exports[`Payments should render when transactions are present 2`] = `
.c15 {
  padding: 0.35em 0.55em;
  border-radius: 0.4em;
  background-color: #fce4ec;
  border: 1px solid rgba(0,0,0,0.05);
  line-height: 1;
}

.c16 {
  padding: 0.35em 0.55em;
  border-radius: 0.4em;
  background-color: #e3f2fd;
  border: 1px solid rgba(0,0,0,0.05);
  line-height: 1;
}

.c17 {
  padding: 0.35em 0.55em;
  border-radius: 0.4em;
  background-color: #fafafa;
  border: 1px solid rgba(0,0,0,0.05);
  line-height: 1;
}

.c18 {
  padding: 0.35em 0.55em;
  border-radius: 0.4em;
  background-color: #e6fffa;
  border: 1px solid rgba(0,0,0,0.05);
  line-height: 1;
}

.c13 {
  display: block;
  font-size: 1.2rem;
  color: #aaa;
}

.c9 {
  cursor: pointer;
  font-size: 1.1rem;
}

.c9:nth-child(even) {
  background-color: #fafafa;
}

.c9:hover {
  background-color: #eee;
}

.c11 {
  padding: 0.75rem 0.5rem;
  text-align: left;
}

.c11 .c12 {
  display: none;
}

.c14 {
  padding: 0.75rem 0.5rem;
  text-align: right;
}

.c14 .c12 {
  display: none;
}

.c5 {
  border-collapse: collapse;
  width: 100%;
}

.c6 {
  padding: 0.75rem 0.5rem;
  text-align: left;
  background-color: #eee;
}

.c7 {
  padding: 0.75rem 0.5rem;
  text-align: right;
  background-color: #eee;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-style: dotted;
  text-decoration-style: dotted;
}

.c7:hover {
  background-color: #ddd;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.2);
  padding: 0 0.5rem;
  margin-bottom: 1.5rem;
}

.c2 {
  font-size: 1.2rem;
  padding: 0.5rem;
  border: 1px solid #ccc;
  border-radius: 0.25rem;
  width: 100%;
}

.c1 {
  margin-top: 1rem;
  margin-bottom: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > * {
  margin-right: 0.5rem;
}

.c4 {
  min-width: 300px;
  padding: 0.5rem;
  border: 1px solid #ccc;
  border-radius: 0.35em;
  font-size: 1rem;
  font-weight: 300;
  line-height: 1.5;
  margin: 0.5rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

@media (max-width:768px) {
  .c5 {
    display: grid;
  }

  .c5 thead {
    display: none;
  }

  .c5 tbody {
    display: grid;
  }

  .c5 .c8 {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 0.5rem;
    padding: 0.5rem;
  }

  .c5 .c10 {
    text-align: left;
    padding: 0;
  }

  .c5 .c10 .c12 {
    display: block;
    font-size: 0.75em;
    line-height: 1.2;
  }
}

<div>
  <section>
    <header
      class="c0"
    >
      <h2
        class="c1"
      >
        page.payments.title
      </h2>
      <div
        class=""
      >
        <select
          class="c2"
        >
          <option
            value="en"
          >
            EN 🇬🇧
          </option>
          <option
            value="fr"
          >
            FR 🇫🇷
          </option>
        </select>
      </div>
    </header>
    <div
      class="c3"
    >
      <input
        class="c4"
        placeholder="Filter Payments"
        type="text"
      />
    </div>
    <table
      class="c5"
    >
      <thead>
        <tr>
          <th
            class="c6"
          >
            table.header.customerName
          </th>
          <th
            class="c6"
          >
            table.header.merchantName
          </th>
          <th
            class="c7"
          >
            table.header.amount
            <small>
              ⇵
            </small>
          </th>
          <th
            class="c6"
          >
            table.header.created
          </th>
          <th
            class="c7"
          >
            table.header.status
            <small>
              ⇵
            </small>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="c8 c9"
          title="Click to open payment details"
        >
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.customerName
            </label>
            Alfred de Musset
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.merchantName
            </label>
            Super Merchant
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.amount
            </label>
            100340
             €
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.created
            </label>
            Wed May 04 2022 00:00:00 GMT+0200 (Central European Summer Time)
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.status
            </label>
            <span
              class="c15"
              type="error"
            >
              status.default
            </span>
          </td>
        </tr>
        <tr
          class="c8 c9"
          title="Click to open payment details"
        >
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.customerName
            </label>
            Nicolas Boileau
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.merchantName
            </label>
            Super Merchant
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.amount
            </label>
            66600
             €
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.created
            </label>
            Fri Mar 04 2022 00:00:00 GMT+0100 (Central European Standard Time)
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.status
            </label>
            <span
              class="c15"
              type="error"
            >
              status.default
            </span>
          </td>
        </tr>
        <tr
          class="c8 c9"
          title="Click to open payment details"
        >
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.customerName
            </label>
            Georges Sand
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.merchantName
            </label>
            Super Merchant
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.amount
            </label>
            30250
             €
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.created
            </label>
            Tue Jan 04 2022 00:00:00 GMT+0100 (Central European Standard Time)
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.status
            </label>
            <span
              class="c16"
              type="info"
            >
              status.in_progress
            </span>
          </td>
        </tr>
        <tr
          class="c8 c9"
          title="Click to open payment details"
        >
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.customerName
            </label>
            Charles Baudelaire
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.merchantName
            </label>
            Super Merchant
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.amount
            </label>
            87600
             €
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.created
            </label>
            Sat Jun 04 2022 00:00:00 GMT+0200 (Central European Summer Time)
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.status
            </label>
            <span
              class="c16"
              type="info"
            >
              status.in_progress
            </span>
          </td>
        </tr>
        <tr
          class="c8 c9"
          title="Click to open payment details"
        >
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.customerName
            </label>
            Victor Hugo
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.merchantName
            </label>
            Super Merchant
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.amount
            </label>
            45900
             €
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.created
            </label>
            Fri Apr 01 2022 00:00:00 GMT+0200 (Central European Summer Time)
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.status
            </label>
            <span
              class="c17"
              type="default"
            >
              status.not_started
            </span>
          </td>
        </tr>
        <tr
          class="c8 c9"
          title="Click to open payment details"
        >
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.customerName
            </label>
            Marguerite Duras
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.merchantName
            </label>
            Super Merchant
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.amount
            </label>
            176490
             €
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.created
            </label>
            Sat Jun 04 2022 00:00:00 GMT+0200 (Central European Summer Time)
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.status
            </label>
            <span
              class="c18"
              type="success"
            >
              status.paid
            </span>
          </td>
        </tr>
        <tr
          class="c8 c9"
          title="Click to open payment details"
        >
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.customerName
            </label>
            Guy de Maupassant
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.merchantName
            </label>
            Super Merchant
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.amount
            </label>
            35200
             €
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.created
            </label>
            Fri Feb 04 2022 00:00:00 GMT+0100 (Central European Standard Time)
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.status
            </label>
            <span
              class="c18"
              type="success"
            >
              status.paid
            </span>
          </td>
        </tr>
        <tr
          class="c8 c9"
          title="Click to open payment details"
        >
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.customerName
            </label>
            Marcel Proust
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.merchantName
            </label>
            Super Merchant
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.amount
            </label>
            80000
             €
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.created
            </label>
            Mon Jul 04 2022 00:00:00 GMT+0200 (Central European Summer Time)
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.status
            </label>
            <span
              class="c18"
              type="success"
            >
              status.paid
            </span>
          </td>
        </tr>
        <tr
          class="c8 c9"
          title="Click to open payment details"
        >
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.customerName
            </label>
            Jean de La Fontaine
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.merchantName
            </label>
            Super Merchant
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.amount
            </label>
            7860
             €
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.created
            </label>
            Wed May 04 2022 00:00:00 GMT+0200 (Central European Summer Time)
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.status
            </label>
            <span
              class="c18"
              type="success"
            >
              status.paid
            </span>
          </td>
        </tr>
        <tr
          class="c8 c9"
          title="Click to open payment details"
        >
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.customerName
            </label>
            Gustave Flaubert
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.merchantName
            </label>
            Super Merchant
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.amount
            </label>
            54600
             €
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.created
            </label>
            Wed May 04 2022 00:00:00 GMT+0200 (Central European Summer Time)
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.status
            </label>
            <span
              class="c16"
              type="info"
            >
              status.ready
            </span>
          </td>
        </tr>
        <tr
          class="c8 c9"
          title="Click to open payment details"
        >
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.customerName
            </label>
            Albert Camus
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.merchantName
            </label>
            Super Merchant
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.amount
            </label>
            155800
             €
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.created
            </label>
            Mon Apr 04 2022 00:00:00 GMT+0200 (Central European Summer Time)
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.status
            </label>
            <span
              class="c16"
              type="info"
            >
              status.ready
            </span>
          </td>
        </tr>
        <tr
          class="c8 c9"
          title="Click to open payment details"
        >
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.customerName
            </label>
            Émile Zola
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.merchantName
            </label>
            Super Merchant
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.amount
            </label>
            356050
             €
          </td>
          <td
            class="c10 c11"
          >
            <label
              class="c12 c13"
            >
              table.header.created
            </label>
            Mon Apr 04 2022 00:00:00 GMT+0200 (Central European Summer Time)
          </td>
          <td
            class="c10 c14"
          >
            <label
              class="c12 c13"
            >
              table.header.status
            </label>
            <span
              class="c16"
              type="info"
            >
              status.ready
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </section>
</div>
`;
